--- a/translations/kangyur/translations/095-002_toh747-the_tantra_of_vajrapani_bhutadamara.xml
+++ b/translations/kangyur/translations/095-002_toh747-the_tantra_of_vajrapani_bhutadamara.xml
@@ -37,7 +37,7 @@
                     Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.8 <date>2022</date>
+                <edition>v 1.0.9 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -74,7 +74,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-26T20:39:26.578Z" user="admin">26/01/2023 20:39:26</note>
+                <note type="lastUpdated" date-time="2023-07-28T11:58:35.139Z" user="admin">28/07/2023 11:58:35</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version
                     increment</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:25:36.907Z" user="mike">2.d</note>
@@ -96,6 +96,7 @@
     <note type="updated" update="text-version" value="v 0.11.3" date-time="2020-06-25T21:26:41.365Z" user="laura">A few more minor corrections from Nate</note>
     <note type="updated" update="text-version" value="v 1.0.0" date-time="2020-06-26T04:28:02.162Z" user="mike">First published</note>
     <note type="updated" update="translation-status" value="1" date-time="2020-06-26T04:28:02.162Z" user="mike">First published</note>
+    <note type="updated" update="translation-status" value="1.a" date-time="2020-06-26T04:28:02.162Z" user="admin">Note added retrospectively based on date of status '1'</note>
     <note type="updated" update="publication-date" value="2020-06-26" date-time="2020-06-26T04:28:02.162Z" user="mike">First published</note>
     <note type="updated" update="text-version" value="1.0.1" date-time="2020-11-23T13:57:44.998Z" user="admin">Auto (TEI migration 2.0.0)</note>
     <note type="updated" update="text-version" value="1.0.2" date-time="2020-12-11T14:06:50.919Z" user="admin">Auto (TEI migration 2.1.5)</note>
@@ -105,6 +106,7 @@
     <note type="updated" update="text-version" value="1.0.6" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
     <note type="updated" update="text-version" value="1.0.7" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
     <note type="updated" update="text-version" value="1.0.8" date-time="2023-01-26T20:39:23.64Z" user="martina-cotter">updated bibl scope (gyud 'bum)</note>
+    <note type="updated" update="text-version" value="1.0.9" date-time="2023-07-28T11:58:32.124Z" user="martina-cotter">Updated "Blissful One" to "Well-Gone One"</note>
 </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -8967,13 +8969,12 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-095-002-968">
+                        <gloss xml:id="UT22084-095-002-968" type="term" mode="match">
                             <term>gandharva</term>
-                            <term xml:lang="Bo-Ltn">dri za </term>
-                            <term xml:lang="bo">དྲི་ཟ།</term>
-                            <term xml:lang="Sa-Ltn">gandharva</term>
-                            <term type="definition">A class of nonhuman beings known for their
-                                musical skills.</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">dri za</term>
+                            <term xml:lang="bo" type="sourceAttested">དྲི་ཟ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">gandharva</term>
+                            <term type="definition">A class of nonhuman beings known for their musical skills.</term>
                         </gloss>
                     </item>
                     <item>
@@ -8986,13 +8987,12 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-095-002-970">
+                        <gloss xml:id="UT22084-095-002-970" type="term" mode="match">
                             <term>garuḍa</term>
-                            <term xml:lang="Bo-Ltn">nam mkha’i lding </term>
-                            <term xml:lang="bo">ནམ་མཁའི་ལྡིང་།</term>
-                            <term xml:lang="Sa-Ltn">garuḍa</term>
-                            <term type="definition">A class of nonhuman beings, half-human and
-                                half-bird.</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">nam mkha’i lding</term>
+                            <term xml:lang="bo" type="sourceAttested">ནམ་མཁའི་ལྡིང་།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">garuḍa</term>
+                            <term type="definition">A class of nonhuman beings, half-human and half-bird.</term>
                         </gloss>
                     </item>
                     <item>
@@ -9027,13 +9027,12 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-095-002-974">
+                        <gloss xml:id="UT22084-095-002-974" type="term" mode="match">
                             <term>kinnara</term>
-                            <term xml:lang="Bo-Ltn">mi’am ci </term>
-                            <term xml:lang="bo">མིའམ་ཅི།</term>
-                            <term xml:lang="Sa-Ltn">kinnara</term>
-                            <term type="definition">A class of nonhuman beings, half-human and
-                                half-horse, or half-human and half-bird.</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">mi’am ci</term>
+                            <term xml:lang="bo" type="sourceAttested">མིའམ་ཅི།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">kinnara</term>
+                            <term type="definition">A class of nonhuman beings, half-human and half-horse, or half-human and half-bird.</term>
                         </gloss>
                     </item>
                     <item>
@@ -9046,11 +9045,11 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-095-002-976">
+                        <gloss xml:id="UT22084-095-002-976" type="term" mode="match">
                             <term>mahoraga</term>
-                            <term xml:lang="Bo-Ltn">lto ’phye chen po </term>
-                            <term xml:lang="bo">ལྟོ་འཕྱེ་ཆེན་པོ།</term>
-                            <term xml:lang="Sa-Ltn">mahoraga</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">lto ’phye chen po</term>
+                            <term xml:lang="bo" type="sourceAttested">ལྟོ་འཕྱེ་ཆེན་པོ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">mahoraga</term>
                             <term type="definition">A class of nonhuman, snake-like beings.</term>
                         </gloss>
                     </item>
@@ -9132,11 +9131,11 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-095-002-985">
+                        <gloss xml:id="UT22084-095-002-985" type="term" mode="match">
                             <term>piśāca</term>
-                            <term xml:lang="Bo-Ltn">sha za </term>
-                            <term xml:lang="bo">ཤ་ཟ།</term>
-                            <term xml:lang="Sa-Ltn">piśāca</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">sha za</term>
+                            <term xml:lang="bo" type="sourceAttested">ཤ་ཟ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">piśāca</term>
                             <term type="definition">A class of flesh-eating demons</term>
                         </gloss>
                     </item>
@@ -9284,9 +9283,9 @@
                     <item>
                         <gloss xml:id="UT22084-095-002-1000" type="term" mode="match">
                             <term>Yakṣa</term>
-                            <term xml:lang="Bo-Ltn">gnod sbyin</term>
-                            <term xml:lang="bo">གནོད་སྦྱིན།</term>
-                            <term xml:lang="Sa-Ltn">yakṣa</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">gnod sbyin</term>
+                            <term xml:lang="bo" type="sourceAttested">གནོད་སྦྱིན།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">yakṣa</term>
                             <term type="definition">A class of nonhuman beings.</term>
                         </gloss>
                     </item>
@@ -10042,7 +10041,7 @@
                             <term xml:lang="Bo-Ltn">su bha ge </term>
                             <term xml:lang="bo">སུ་བྷ་གེ</term>
                             <term xml:lang="Sa-Ltn">Subhagā</term>
-                            <term type="definition">‟Blissful One,” one of the six kinnara
+                            <term type="definition">‟Well-Gone One,” one of the six kinnara
                                 queens</term>
                         </gloss>
                     </item>
@@ -10424,15 +10423,13 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="person" xml:id="UT22084-095-002-2025">
+                        <gloss xml:id="UT22084-095-002-2025" type="person" mode="match">
                             <term>princely youth Mañjuśrī</term>
-                            <term xml:lang="Bo-Ltn">’jam dpal gzhon nur ’gyur pa</term>
-                            <term xml:lang="bo">འཇམ་དཔལ་གཞོན་ནུར་འགྱུར་པ།</term>
-                            <term xml:lang="Sa-Ltn">Mañjuśrī­kumāra­bhūta</term>
-                            <term type="definition">Mañjuśrī who takes the form of a youth, an
-                                epithet by which the well-known bodhisattva is often
-                                referred.</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">’jam dpal gzhon nur ’gyur pa</term>
+                            <term xml:lang="bo" type="sourceAttested">འཇམ་དཔལ་གཞོན་ནུར་འགྱུར་པ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">mañjuśrī­kumāra­bhūta</term>
                             <term type="alternative">Mañjuśrī, the princely youth</term>
+                            <term type="definition">Mañjuśrī who takes the form of a youth, an epithet by which the well-known bodhisattva is often referred.</term>
                         </gloss>
                     </item>
                     <item>
@@ -10488,13 +10485,12 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-095-002-2032">
+                        <gloss xml:id="UT22084-095-002-2032" type="term" mode="match">
                             <term>rākṣasa</term>
-                            <term xml:lang="Bo-Ltn">srin po</term>
-                            <term xml:lang="bo">སྲིན་པོ།</term>
-                            <term xml:lang="Sa-Ltn">rākṣasa</term>
-                            <term type="definition">A class of flesh-eating demons that haunt
-                                frightening places.</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">srin po</term>
+                            <term xml:lang="bo" type="sourceAttested">སྲིན་པོ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">rākṣasa</term>
+                            <term type="definition">A class of flesh-eating demons that haunt frightening places.</term>
                         </gloss>
                     </item>
                     <item>
