--- a/translations/kangyur/placeholders/091-040_toh643,890-the_incantation_of_the_promise_made_by_maitreya.xml
+++ b/translations/kangyur/placeholders/091-040_toh643,890-the_incantation_of_the_promise_made_by_maitreya.xml
@@ -11,14 +11,15 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryamaitreyapratijñānāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa byams pas dam bcas pa zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa byams pas dam bcas pa zhes bya ba'i gzungs</title>
-                <author role="translatorMain" ref="eft:team-55"/>
-                <author role="translatorEng" ref="eft:person-67">Lowell Cook</author>
+                <author role="translatorMain" xml:id="UT22084-091-040-1"/>
+                <author role="translatorEng" xml:id="UT22084-091-040-2">Lowell Cook</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2023</date>
+                <edition>v 0.0.4 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-091-040"/>
                 <date/>
             </publicationStmt>
@@ -42,12 +43,27 @@
                     <idno source-id="O1JC114941JC12652" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-14T08:47:11.198Z" user="admin">14/03/2023 08:47:11</note>
-                <note type="updated" update="translation-status" value="3" date-time="2023-03-14T08:44:58.999Z" user="line-tofte">3</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2023-03-14T08:44:58.999Z" user="line-tofte">0.0.1</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2023-03-14T08:47:09.739Z" user="line-tofte">Auto (update-contributors)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2023-03-14T08:44:58.999Z" type="translation-status" status="3" xml:id="UT22084-091-040-3">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-14T08:44:58.999Z" type="text-version" status="0.0.1" xml:id="UT22084-091-040-4">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-14T08:47:09.739Z" type="text-version" status="0.0.2" xml:id="UT22084-091-040-5">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.3" xml:id="UT22084-091-040-6">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-31T13:44:37.86Z" type="translation-status" status="2.h" xml:id="UT22084-091-040-7">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-31T13:44:37.86Z" type="text-version" status="0.0.4" xml:id="UT22084-091-040-8">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
