--- a/translations/kangyur/placeholders/042-004_toh63-the_sutra_of_ugras_questions.xml
+++ b/translations/kangyur/placeholders/042-004_toh63-the_sutra_of_ugras_questions.xml
@@ -10,15 +10,16 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryagṛhapatyugra­paripṛcchā­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa khyim bdag drag shul can gyis zhus pa zhes bya ba theg pa chen po'i mdo</title>
                 <title type="otherTitle" xml:lang="zh">《郁伽長者所問經》（大正藏：《大寶積經郁伽長者會第十九》）</title>
-                <author role="translatorMain" ref="eft:team-49"/>
-                <author role="translatorEng" ref="eft:person-60">Benjamin Ewing</author>
-                <editor role="reviser" ref="eft:person-67">Lowell Cook</editor>
+                <author role="translatorMain" xml:id="UT22084-042-004-1"/>
+                <author role="translatorEng" xml:id="UT22084-042-004-2">Benjamin Ewing</author>
+                <editor role="reviser" xml:id="UT22084-042-004-3">Lowell Cook</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.5 <date>2020</date>
+                <edition>v 0.0.7 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-042-004"/>
                 <date/>
             </publicationStmt>
@@ -33,15 +34,36 @@
                     <idno source-id="O1JC114941JC11598" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-09T15:03:30.326Z" user="admin">09/06/2022 15:03:30</note>
-                <note type="updated" update="translation-status" value="4" date-time="2020-10-27T13:14:38.852Z" user="line-tofte">4</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-27T13:14:38.852Z" user="line-tofte">0.0.1</note>
-                <note type="updated" update="translation-status" value="3" date-time="2020-11-12T10:59:17.93Z" user="line-tofte">3</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2020-11-12T10:59:17.93Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2020-11-12T10:59:58.619Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2022-06-09T09:53:28.512Z" user="line-tofte">Auto (update-contributors)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2020-10-27T13:14:38.852Z" type="translation-status" status="4" xml:id="UT22084-042-004-4">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2020-10-27T13:14:38.852Z" type="text-version" status="0.0.1" xml:id="UT22084-042-004-5">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2020-11-12T10:59:17.93Z" type="translation-status" status="3" xml:id="UT22084-042-004-6">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2020-11-12T10:59:17.93Z" type="text-version" status="0.0.2" xml:id="UT22084-042-004-7">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2020-11-12T10:59:58.619Z" type="text-version" status="0.0.3" xml:id="UT22084-042-004-8">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-06-09T09:53:28.512Z" type="text-version" status="0.0.4" xml:id="UT22084-042-004-9">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.6" xml:id="UT22084-042-004-10">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-01T12:41:08.003Z" type="translation-status" status="2.h" xml:id="UT22084-042-004-11">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-01T12:41:08.003Z" type="text-version" status="0.0.7" xml:id="UT22084-042-004-12">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
