--- a/translations/kangyur/placeholders/093-020_toh705,900-the_hundred_and_eight_names_of_avalokitesvara.xml
+++ b/translations/kangyur/placeholders/093-020_toh705,900-the_hundred_and_eight_names_of_avalokitesvara.xml
@@ -13,10 +13,11 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryāvalokiteśvarasya nāmāṣṭaśatakam</title>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.1 <date>2021</date>
+                <edition>v 0.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="4">
+            <publicationStmt>
+                <availability status=""/>
                 <idno xml:id="UT22084-093-020"/>
                 <date/>
             </publicationStmt>
@@ -40,11 +41,24 @@
                     <idno source-id="O1JC114941JC12662" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-03-01T08:31:28.944Z" user="admin">01/03/2021 08:31:28</note>
-    <note type="updated" update="translation-status" value="4" date-time="2021-03-01T08:31:24.675Z" user="line-tofte">4</note>
-    <note type="updated" update="text-version" value="0.0.1" date-time="2021-03-01T08:31:24.675Z" user="line-tofte">0.0.1</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2021-03-01T08:31:24.675Z" type="translation-status" status="4" xml:id="UT22084-093-020-1">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2021-03-01T08:31:24.675Z" type="text-version" status="0.0.1" xml:id="UT22084-093-020-2">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.2" xml:id="UT22084-093-020-3">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-01T15:02:30.888Z" type="translation-status" status="" xml:id="UT22084-093-020-4">
+                    <desc/>
+                </change>
+                <change who="#line-tofte" when="2023-08-01T15:02:30.888Z" type="text-version" status="0.0.3" xml:id="UT22084-093-020-5">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
