--- a/translations/kangyur/placeholders/040-007_toh56-the_bodhisattvas_scriptural_collection.xml
+++ b/translations/kangyur/placeholders/040-007_toh56-the_bodhisattvas_scriptural_collection.xml
@@ -10,24 +10,25 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryabodhisattva­piṭaka­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa byang chub sems dpa'i sde snod ces bya ba thegs pa chen po'i mdo</title>
                 <title type="otherTitle" xml:lang="zh">《菩薩藏經》（大正藏：《大寶積經菩薩藏會第十二》）</title>
-                <author role="translatorMain" ref="eft:team-32">The Norwegian Institute of Palaeography and Historical Philology (PHI)</author>
-                <author role="translatorEng" ref="eft:person-195">Jens Braarvig</author>
-                <author role="translatorEng" ref="eft:person-196">David Welsh</author>
-                <author role="translatorEng" ref="eft:person-197">Fredrik Liland</author>
-                <author role="translatorEng" ref="eft:person-198">Andrew Skilton</author>
-                <editor role="externalReviewer" ref="eft:person-281">Paul Harrison</editor>
-                <editor role="externalReviewer" ref="eft:person-76">Wiesiek Mical</editor>
-                <editor role="finalReviewer" ref="eft:person-230">Tom Tillemans</editor>
-                <consultant role="projectManager" ref="eft:person-195">Jens Braarvig</consultant>
-                <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
-                <sponsor ref="sponsors.xml#sponsor-6">Chang Tai Kwang</sponsor>
+                <author role="translatorMain" xml:id="UT22084-040-007-1">The Norwegian Institute of Palaeography and Historical Philology (PHI)</author>
+                <author role="translatorEng" xml:id="UT22084-040-007-2">Jens Braarvig</author>
+                <author role="translatorEng" xml:id="UT22084-040-007-3">David Welsh</author>
+                <author role="translatorEng" xml:id="UT22084-040-007-4">Fredrik Liland</author>
+                <author role="translatorEng" xml:id="UT22084-040-007-5">Andrew Skilton</author>
+                <editor role="externalReviewer" xml:id="UT22084-040-007-6">Paul Harrison</editor>
+                <editor role="externalReviewer" xml:id="UT22084-040-007-7">Wiesiek Mical</editor>
+                <editor role="projectEditor" xml:id="UT22084-040-007-8">Tom Tillemans</editor>
+                <consultant role="projectManager" xml:id="UT22084-040-007-9">Jens Braarvig</consultant>
+                <editor role="copyEditor" xml:id="UT22084-040-007-10">Laura Goetz</editor>
+                <sponsor xml:id="UT22084-040-007-11">Chang Tai Kwang</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2019</date>
+                <edition>v 0.0.8 <date>2023</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.d">
+            <publicationStmt>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-040-007"/>
                 <date/>
             </publicationStmt>
@@ -35,7 +36,7 @@
                 <bibl key="toh56" type="text">
                     <ref>Toh 56</ref>
                     <biblScope/>
-                    <author role="translatorTib">Surendrabodhi, Śīlendra, Dharmatāśīla</author>
+                    <author role="translatorTib" xml:id="UT22084-040-007-23">Surendrabodhi, Śīlendra, Dharmatāśīla</author>
                     <location work="UT4CZ5369" count-pages="487">
                         <volume number="40" start-page="510" end-page="587"/>
                         <volume number="41" start-page="2" end-page="412"/>
@@ -44,18 +45,48 @@
                     <idno source-id="O1JC114941JC11587" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-07-20T07:56:31.546Z" user="admin">20/07/2023 07:56:31</note>
-                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-                <note type="updated" update="translation-status" value="2.f" date-time="2020-01-27T13:10:02.591Z" user="mike">2.f</note>
-                <note type="updated" update="translation-status" value="2.g" date-time="2020-03-13T08:35:26.842Z" user="andreas">2.g</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2022-06-29T16:00:44.607Z" user="cabie-sim">Auto (update-titles)</note>
-                <note type="updated" update="translation-status" value="2.e" date-time="2023-04-05T15:44:48.8Z" user="line-tofte">2.e</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2023-04-05T15:44:48.8Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2023-04-05T15:45:44.387Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.d" date-time="2023-07-20T07:56:27.251Z" user="line-tofte">2.d</note>
-                <note type="updated" update="text-version" value="0.0.5" date-time="2023-07-20T07:56:27.251Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2019-12-20T12:56:48.575Z" type="text-version" status="v 0.0.1" xml:id="UT22084-040-007-12">
+                    <desc>Automated version increment</desc>
+                </change>
+                <change who="#mike" when="2020-01-27T13:10:02.591Z" type="translation-status" status="2.f" xml:id="UT22084-040-007-13">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#andreas" when="2020-03-13T08:35:26.842Z" type="translation-status" status="2.g" xml:id="UT22084-040-007-14">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#cabie-sim" when="2022-06-29T16:00:44.607Z" type="text-version" status="0.0.2" xml:id="UT22084-040-007-15">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-04-05T15:44:48.8Z" type="translation-status" status="2.e" xml:id="UT22084-040-007-16">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2023-04-05T15:44:48.8Z" type="text-version" status="0.0.3" xml:id="UT22084-040-007-17">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-04-05T15:45:44.387Z" type="text-version" status="0.0.4" xml:id="UT22084-040-007-18">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-20T07:56:27.251Z" type="translation-status" status="2.d" xml:id="UT22084-040-007-19">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-20T07:56:27.251Z" type="text-version" status="0.0.5" xml:id="UT22084-040-007-20">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-20T07:57:57.747Z" type="text-version" status="0.0.6" xml:id="UT22084-040-007-21">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.7" xml:id="UT22084-040-007-22">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-02T13:15:15.54Z" type="translation-status" status="2.c" xml:id="UT22084-040-007-24">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-02T13:15:15.54Z" type="text-version" status="0.0.8" xml:id="UT22084-040-007-25">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
