--- a/translations/kangyur/placeholders/088-030_toh536,869-recollecting_the_common_essence_of_the_tathagatas.xml
+++ b/translations/kangyur/placeholders/088-030_toh536,869-recollecting_the_common_essence_of_the_tathagatas.xml
@@ -9,14 +9,15 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa'i spyi'i snying po rjes dran/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa'i spyi'i snying po rjes su dran pa'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa'i spyi'i snying po rjes su dran pa/</title>
-                <author role="translatorMain" ref="eft:team-55"/>
-                <author role="translatorEng" ref="eft:person-61">Catherine Dalton</author>
+                <author role="translatorMain" xml:id="UT22084-088-030-1"/>
+                <author role="translatorEng" xml:id="UT22084-088-030-2">Catherine Dalton</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2022</date>
+                <edition>v 0.0.4 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-088-030"/>
                 <date/>
             </publicationStmt>
@@ -40,12 +41,27 @@
                     <idno source-id="O1JC114941JC12631" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-16T10:02:41.263Z" user="admin">16/12/2022 10:02:41</note>
-                <note type="updated" update="translation-status" value="3" date-time="2022-12-16T10:00:42Z" user="line-tofte">3</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T10:00:42Z" user="line-tofte">0.0.1</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-16T10:02:35.567Z" user="line-tofte">Auto (update-contributors)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2022-12-16T10:00:42Z" type="translation-status" status="3" xml:id="UT22084-088-030-3">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-16T10:00:42Z" type="text-version" status="0.0.1" xml:id="UT22084-088-030-4">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-16T10:02:35.567Z" type="text-version" status="0.0.2" xml:id="UT22084-088-030-5">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.3" xml:id="UT22084-088-030-6">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-02T13:54:00.178Z" type="translation-status" status="2.h" xml:id="UT22084-088-030-7">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-02T13:54:00.178Z" type="text-version" status="0.0.4" xml:id="UT22084-088-030-8">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
