--- a/translations/kangyur/placeholders/088-032_toh538,1068-the_incantation_the_cloud_of_offerings.xml
+++ b/translations/kangyur/placeholders/088-032_toh538,1068-the_incantation_the_cloud_of_offerings.xml
@@ -9,15 +9,16 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">mchod sprin gyi gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">pūjameghanāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">mchod pa'i sprin zhes bya ba'i gzungs/</title>
-                <author role="translatorMain" ref="eft:team-55"/>
-                <author role="translatorEng" ref="eft:person-61">Catherine Dalton</author>
+                <author role="translatorMain" xml:id="UT22084-088-032-1"/>
+                <author role="translatorEng" xml:id="UT22084-088-032-2">Catherine Dalton</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2019</date>
+                <edition>v 0.0.5 <date>2023</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="3">
+            <publicationStmt>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-088-032"/>
                 <date/>
             </publicationStmt>
@@ -41,13 +42,30 @@
                     <idno source-id="O1JC114941JC12832" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-16T10:04:04.784Z" user="admin">16/12/2022 10:04:04</note>
-                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-                <note type="updated" update="translation-status" value="3" date-time="2022-12-16T10:03:28.046Z" user="line-tofte">3</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-16T10:03:28.046Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2022-12-16T10:03:59.088Z" user="line-tofte">Auto (update-contributors)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2019-12-20T12:56:48.575Z" type="text-version" status="v 0.0.1" xml:id="UT22084-088-032-3">
+                    <desc>Automated version increment</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-16T10:03:28.046Z" type="translation-status" status="3" xml:id="UT22084-088-032-4">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-16T10:03:28.046Z" type="text-version" status="0.0.2" xml:id="UT22084-088-032-5">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-16T10:03:59.088Z" type="text-version" status="0.0.3" xml:id="UT22084-088-032-6">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.4" xml:id="UT22084-088-032-7">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-02T14:09:56.388Z" type="translation-status" status="2.h" xml:id="UT22084-088-032-8">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-02T14:09:56.388Z" type="text-version" status="0.0.5" xml:id="UT22084-088-032-9">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
