--- a/translations/kangyur/placeholders/071-010_toh296-the_sutra_on_examples_of_youth.xml
+++ b/translations/kangyur/placeholders/071-010_toh296-the_sutra_on_examples_of_youth.xml
@@ -9,10 +9,11 @@
                 <title type="mainTitle" xml:lang="en">The Sūtra on Examples of Youth</title>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.4 <date>2020</date>
+                <edition>v 0.0.6 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="4">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-071-010"/>
                 <date/>
             </publicationStmt>
@@ -27,13 +28,30 @@
                     <idno source-id="O1JC114941JC11962" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-08-26T13:20:14.202Z" user="admin">26/08/2021 13:20:14</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2020-12-01T10:42:12.671Z" user="john">Text note added</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2020-12-01T11:47:52.268Z" user="john">Text note extended.</note>
-    <note type="updated" update="translation-status" value="4" date-time="2021-08-26T13:20:09.304Z" user="line-tofte">4</note>
-    <note type="updated" update="text-version" value="0.0.4" date-time="2021-08-26T13:20:09.304Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#john" when="2020-12-01T10:42:12.671Z" type="text-version" status="0.0.2" xml:id="UT22084-071-010-1">
+                    <desc>Text note added</desc>
+                </change>
+                <change who="#john" when="2020-12-01T11:47:52.268Z" type="text-version" status="0.0.3" xml:id="UT22084-071-010-2">
+                    <desc>Text note extended.</desc>
+                </change>
+                <change who="#line-tofte" when="2021-08-26T13:20:09.304Z" type="translation-status" status="4" xml:id="UT22084-071-010-3">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2021-08-26T13:20:09.304Z" type="text-version" status="0.0.4" xml:id="UT22084-071-010-4">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.5" xml:id="UT22084-071-010-5">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-02T15:29:18.105Z" type="translation-status" status="3" xml:id="UT22084-071-010-6">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-02T15:29:18.105Z" type="text-version" status="0.0.6" xml:id="UT22084-071-010-7">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
