--- a/translations/tengyur/placeholders/021-003_toh1422-yoginisamcaryanibandha.xml
+++ b/translations/tengyur/placeholders/021-003_toh1422-yoginisamcaryanibandha.xml
@@ -10,11 +10,12 @@
                 <title xml:lang="en" type="mainTitle">Explanations Connected to the Manifesting of Yogiṇīs Tantra</title>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.1 <date>2021</date>
+                <edition>v 0.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="4">
+            <publicationStmt>
+                <availability status=""/>
                 <idno xml:id="UT23703-021-003"/>
                 <date/>
             </publicationStmt>
@@ -22,9 +23,9 @@
                 <bibl key="toh1422" type="text">
                     <ref>Toh 1422</ref>
                     <biblScope>ff. 120r-139r</biblScope>
-                    <author ref="eft:entity-17684" xml:lang="Sa-Ltn">Tathāgatarakṣita</author>
-                    <author role="translatorTib" ref="eft:entity-17597" xml:lang="Bo-Ltn">bod kyi lo tsa ba ba ri rin chen grags pa</author>
-                    <author role="translatorTib" ref="eft:entity-17684" xml:lang="Sa-Ltn">Tathāgatarakṣita</author>
+                    <author xml:lang="Sa-Ltn" xml:id="UT23703-021-003-1">Tathāgatarakṣita</author>
+                    <author role="translatorTib" xml:lang="Bo-Ltn" xml:id="UT23703-021-003-2">bod kyi lo tsa ba ba ri rin chen grags pa</author>
+                    <author role="translatorTib" xml:lang="Sa-Ltn" xml:id="UT23703-021-003-3">Tathāgatarakṣita</author>
                     <location work="UT23703" count-pages="39">
                         <volume number="21" start-page="239" end-page="277"/>
                     </location>
@@ -33,14 +34,27 @@
                 </bibl>
                 <link type="isCommentaryOf" target="toh375"/>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-12-06T14:59:09.506Z" user="admin">06/12/2021 14:59:09</note>
-                <note type="updated" update="import" value="fileDesc" import="tengyur-data-1401-1424_PH_new_v2.3.xml" date-time="2021-11-02T13:18:33.485Z" user="admin"/>
-            
-    <note type="updated" update="translation-status" value="4" date-time="2021-12-06T14:59:03.515Z" user="john">4</note>
-
-    <note type="updated" update="text-version" value="0.0.1" date-time="2021-12-06T14:59:03.515Z" user="john">0.0.1</note>
-</notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2021-11-02T13:18:33.485Z" type="import" xml:id="UT23703-021-003-4" source="tengyur-data-1401-1424_PH_new_v2.3.xml">
+                    <desc/>
+                </change>
+                <change who="#john" when="2021-12-06T14:59:03.515Z" type="translation-status" status="4" xml:id="UT23703-021-003-5">
+                    <desc>4</desc>
+                </change>
+                <change who="#john" when="2021-12-06T14:59:03.515Z" type="text-version" status="0.0.1" xml:id="UT23703-021-003-6">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.2" xml:id="UT23703-021-003-7">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-03T09:37:07.569Z" type="translation-status" status="" xml:id="UT23703-021-003-8">
+                    <desc/>
+                </change>
+                <change who="#line-tofte" when="2023-08-03T09:37:07.569Z" type="text-version" status="0.0.3" xml:id="UT23703-021-003-9">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
