--- a/translations/kangyur/placeholders/068-003_toh269-the_sutra_dispelling_the_darkness_of_the_ten_directions.xml
+++ b/translations/kangyur/placeholders/068-003_toh269-the_sutra_dispelling_the_darkness_of_the_ten_directions.xml
@@ -9,21 +9,22 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">phyogs bcu'i mun sel gyi mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryadaśadigandha­kāravidhvaṃsana­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">'phags pa phyogs bcu'i mun pa rnam par sel ba zhes bya ba theg pa chen po'i mdo</title>
-                <author role="translatorMain" ref="eft:team-27"/>
-                <editor role="externalReviewer" ref="eft:person-281">Paul Harrison</editor>
-                <editor role="projectEditor" ref="eft:person-92">Laura Goetz</editor>
-                <consultant role="dharmaMaster" ref="eft:person-173">Ven. Khenpo Kalsang Gyaltsen</consultant>
-                <author role="translatorEng" ref="eft:person-173">Ven. Khenpo Kalsang Gyaltsen</author>
-                <consultant role="projectManager" ref="eft:person-175">Rev. Dr. Ani Kunga Chodron</consultant>
-                <author role="translatorEng" ref="eft:person-175">Rev. Dr. Ani Kunga Chodron</author>
-                <editor role="projectEditor" ref="eft:person-74">Ryan Damron</editor>
+                <author role="translatorMain" xml:id="UT22084-068-003-1"/>
+                <editor role="externalReviewer" xml:id="UT22084-068-003-2">Paul Harrison</editor>
+                <editor role="projectEditor" xml:id="UT22084-068-003-3">Laura Goetz</editor>
+                <consultant role="dharmaMaster" xml:id="UT22084-068-003-4">Ven. Khenpo Kalsang Gyaltsen</consultant>
+                <author role="translatorEng" xml:id="UT22084-068-003-5">Ven. Khenpo Kalsang Gyaltsen</author>
+                <consultant role="projectManager" xml:id="UT22084-068-003-6">Rev. Dr. Ani Kunga Chodron</consultant>
+                <author role="translatorEng" xml:id="UT22084-068-003-7">Rev. Dr. Ani Kunga Chodron</author>
+                <editor role="projectEditor" xml:id="UT22084-068-003-8">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2019</date>
+                <edition>v 0.0.9 <date>2023</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.f">
+            <publicationStmt>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-068-003"/>
                 <date/>
             </publicationStmt>
@@ -38,19 +39,48 @@
                     <idno source-id="O1JC114941JC11927" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-07-17T11:39:58.292Z" user="admin">17/07/2023 11:39:58</note>
-                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2021-10-19T08:20:42.832Z" user="line-tofte">2.h</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2021-10-19T08:20:42.832Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="translation-status" value="2.g" date-time="2022-09-16T13:50:06.702Z" user="line-tofte">2.g</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2022-09-16T13:50:06.702Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2022-09-16T13:50:42.931Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.0.5" date-time="2023-01-16T09:52:31.274Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.0.6" date-time="2023-06-29T09:01:03.756Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.f" date-time="2023-07-17T11:39:54.033Z" user="line-tofte">2.f</note>
-                <note type="updated" update="text-version" value="0.0.7" date-time="2023-07-17T11:39:54.033Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2019-12-20T12:56:48.575Z" type="text-version" status="v 0.0.1" xml:id="UT22084-068-003-9">
+                    <desc>Automated version increment</desc>
+                </change>
+                <change who="#line-tofte" when="2021-10-19T08:20:42.832Z" type="translation-status" status="2.h" xml:id="UT22084-068-003-10">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2021-10-19T08:20:42.832Z" type="text-version" status="0.0.2" xml:id="UT22084-068-003-11">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-09-16T13:50:06.702Z" type="translation-status" status="2.g" xml:id="UT22084-068-003-12">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2022-09-16T13:50:06.702Z" type="text-version" status="0.0.3" xml:id="UT22084-068-003-13">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-09-16T13:50:42.931Z" type="text-version" status="0.0.4" xml:id="UT22084-068-003-14">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-01-16T09:52:31.274Z" type="text-version" status="0.0.5" xml:id="UT22084-068-003-15">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-06-29T09:01:03.756Z" type="text-version" status="0.0.6" xml:id="UT22084-068-003-16">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-17T11:39:54.033Z" type="translation-status" status="2.f" xml:id="UT22084-068-003-17">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-17T11:39:54.033Z" type="text-version" status="0.0.7" xml:id="UT22084-068-003-18">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.8" xml:id="UT22084-068-003-19">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-04T08:57:59.762Z" type="translation-status" status="2.d" xml:id="UT22084-068-003-20">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-04T08:57:59.762Z" type="text-version" status="0.0.9" xml:id="UT22084-068-003-21">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
