--- a/translations/kangyur/placeholders/072-023_toh323-the_single_stanza.xml
+++ b/translations/kangyur/placeholders/072-023_toh323-the_single_stanza.xml
@@ -4,15 +4,20 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">tshigs su bcad pa gcig pa/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">ekagāthā</title>
                 <title type="mainTitle" xml:lang="en">The Single Stanza</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">ekagāthā</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">tshigs su bcad pa gcig pa/</title>
+                <author role="translatorMain" xml:id="UT22084-072-023-1"/>
+                <consultant role="projectManager" xml:id="UT22084-072-023-2">Giuliano Francisco Proença</consultant>
+                <author role="translatorEng" xml:id="UT22084-072-023-3">Giuliano Francisco Proença</author>
+                <editor role="proofreader" xml:id="UT22084-072-023-4">Daniela Espíndola</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2023</date>
+                <edition>v 0.0.6 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-072-023"/>
                 <date/>
             </publicationStmt>
@@ -27,9 +32,33 @@
                     <idno source-id="O1JC114941JC11999" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-05-11T13:40:39.895Z" user="admin">11/05/2023 13:40:39</note>    <note type="updated" update="translation-status" value="4" date-time="2023-01-30T15:05:48.412Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-01-30T15:05:48.412Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="3" date-time="2023-05-11T13:40:35.637Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2023-05-11T13:40:35.637Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2023-01-30T15:05:48.412Z" type="translation-status" status="4" xml:id="UT22084-072-023-5">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2023-01-30T15:05:48.412Z" type="text-version" status="0.0.1" xml:id="UT22084-072-023-6">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-11T13:40:35.637Z" type="translation-status" status="3" xml:id="UT22084-072-023-7">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-11T13:40:35.637Z" type="text-version" status="0.0.2" xml:id="UT22084-072-023-8">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-11T13:42:41.634Z" type="text-version" status="0.0.3" xml:id="UT22084-072-023-9">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-11T13:43:23.983Z" type="text-version" status="0.0.4" xml:id="UT22084-072-023-10">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.5" xml:id="UT22084-072-023-11">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#john" when="2023-08-04T19:02:09.933Z" type="text-version" status="0.0.6" xml:id="UT22084-072-023-12">
+                    <desc>User set version to 0.0.6</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
