--- a/translations/kangyur/placeholders/068-003_toh269-the_sutra_dispelling_the_darkness_of_the_ten_directions.xml
+++ b/translations/kangyur/placeholders/068-003_toh269-the_sutra_dispelling_the_darkness_of_the_ten_directions.xml
@@ -7,8 +7,8 @@
                 <title type="mainTitle" xml:lang="en">The Sūtra Dispelling the Darkness of the Ten Directions</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">daśadigandhakāravidhvaṃsanasūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">phyogs bcu'i mun sel gyi mdo/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryadaśadigandha­kāravidhvaṃsana­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">'phags pa phyogs bcu'i mun pa rnam par sel ba zhes bya ba theg pa chen po'i mdo</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">āryadaśadigandha­kāravidhvaṃsana­nāmamahāyānasūtra</title>
                 <author role="translatorMain" xml:id="UT22084-068-003-1"/>
                 <editor role="externalReviewer" xml:id="UT22084-068-003-2">Paul Harrison</editor>
                 <editor role="projectEditor" xml:id="UT22084-068-003-3">Laura Goetz</editor>
@@ -17,14 +17,15 @@
                 <consultant role="projectManager" xml:id="UT22084-068-003-6">Rev. Dr. Ani Kunga Chodron</consultant>
                 <author role="translatorEng" xml:id="UT22084-068-003-7">Rev. Dr. Ani Kunga Chodron</author>
                 <editor role="projectEditor" xml:id="UT22084-068-003-8">Ryan Damron</editor>
+                <editor role="copyEditor" xml:id="UT22084-068-003-30">Konchog Norbu</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2023</date>
+                <edition>v 0.0.11 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-068-003"/>
                 <date/>
             </publicationStmt>
@@ -78,6 +79,15 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2023-08-04T08:57:59.762Z" type="text-version" status="0.0.9" xml:id="UT22084-068-003-21">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-04T08:58:35.777Z" type="text-version" status="0.0.10" xml:id="UT22084-068-003-31">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-08T06:38:39.768Z" type="translation-status" status="2.c" xml:id="UT22084-068-003-32">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-08T06:38:39.768Z" type="text-version" status="0.0.11" xml:id="UT22084-068-003-33">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
