--- a/translations/kangyur/placeholders/054-007_toh126-the_sutra_like_gold_dust.xml
+++ b/translations/kangyur/placeholders/054-007_toh126-the_sutra_like_gold_dust.xml
@@ -16,14 +16,15 @@
                 <consultant role="projectManager" xml:id="UT22084-054-007-5">Chodrungma Kunga Chodron</consultant>
                 <editor role="projectEditor" xml:id="UT22084-054-007-6">George FitzHerbert</editor>
                 <editor role="projectEditor" xml:id="UT22084-054-007-7">Nathaniel Rich</editor>
+                <editor role="copyEditor" xml:id="UT22084-054-007-28">Konchog Norbu</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2023</date>
+                <edition>v 0.0.11 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-054-007"/>
                 <date/>
             </publicationStmt>
@@ -77,6 +78,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2023-08-04T09:18:17.343Z" type="text-version" status="0.0.9" xml:id="UT22084-054-007-20">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-04T09:19:54.61Z" type="text-version" status="0.0.10" xml:id="UT22084-054-007-29">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-08T12:47:36.843Z" type="translation-status" status="2.d" xml:id="UT22084-054-007-30">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-08T12:47:36.843Z" type="text-version" status="0.0.11" xml:id="UT22084-054-007-31">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
